--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,27 @@
             <version>5.10.3</version>
             <scope>test</scope>
         </dependency>
-
     </dependencies>
+    <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-jar-plugin</artifactId>
+            <!-- Here come other details
+            ...
+            -->
+            <configuration>
+              <archive>
+                <manifest>
+                  <addClasspath>true</addClasspath>
+                  <mainClass>telran.time.Main</mainClass>
+                </manifest>
+              </archive>
+            </configuration>
+            <!-- Here come other details
+            ...
+            -->
+          </plugin>
+        </plugins>
+      </build>
 </project>
